# flopsy-bird

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: main.c.5D0EA4D8CD68736A.idx
src/: main.c
